--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "loader.js",
   "scripts": {
     "app-start": "cd metronami && npm start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,12 @@
     "extract-zip": "^2.0.1",
     "get-github-tag": "^1.1.0",
     "ncp": "^2.0.0",
+    "open": "^8.2.1",
     "semver": "^7.3.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-google": "^0.14.0",
+    "nodemon": "^2.0.12"
   }
 }
